# tree-sitter-git-rebase

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  index.html  package-lock.json  package.json  playground.js  pyproject.toml  setup.py  tree-sitter-git_rebase.wasm  tree-sitter-gitrebasetodo.wasm  tree-sitter-rebase.wasm  tree-sitter.json
.github/workflows/: ci.yml  generate-parser.yml  release.yml
bindings/c/: tree-sitter-git-rebase.pc.in  tree-sitter-git_rebase.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_git_rebase/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGitRebase/: git_rebase.h
bindings/swift/TreeSitterGitRebaseTests/: TreeSitterGitRebaseTests.swift
docs/: index.html  playground.js
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: all.txt  corpus.txt
test/highlight/: commands.git-rebase-todo  commit-operations.git-rebase-todo  rebase-merges.git-rebase-todo
