[build-system]
build-backend = "setuptools.build_meta"
requires      = [ "setuptools>=62.4.0", "wheel" ]

[project]
authors = [ { email = "mcarsondavis@gmail.com", name = "Michael Davis" } ]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
description = "A tree-sitter grammar for git rebase commands"
keywords = [ "incremental", "parsing", "tree-sitter", "git-rebase" ]
license.text = "MIT"
name = "tree-sitter-git-rebase"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/the-mikedavis/tree-sitter-git-rebase"

[project.optional-dependencies]
core = [ "tree-sitter~=0.24" ]

[tool.cibuildwheel]
build          = "cp310-*"
build-frontend = "build"
